--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,16 +1,54 @@
 <!-- Backand Login model -->
-<div class="modal-header">
-    <h3 class="modal-title">Backand Login</h3>
-    <h5>Use your Backand username and password to login</h5>
+<div class="header">
+    <h2>Backand Login</h2>
+    <h4>Use your Backand username and password to login</h4>
 </div>
-<div class="modal-body clearfix">
-    <div class="form-group col-lg-12 col-md-12 col-sm-12">
-        <input type="text" ng-model="username" class="form-control">
-        <input type="password" ng-model="password" class="form-control">
-        <input type="text" ng-model="appName" class="form-control">
+<div class="body">
+        <form class="form" name="form" ng-submit="signIn()" >
+            <fieldset>
+                <div class="form-group">
+                    <input type="email"
+                           class="form-control"
+                           name = "username"
+                           placeholder="Your Backand username"
+                           ng-model = "username"
+                           ng-model-options="{debounce: 200}"
+                           required>
+                    <div class="text-danger" ng-show="form.username.$error.email">This is not a valid email.</div>
+                </div>
+                <div class="form-group">
+                    <input type="password"
+                           class="form-control"
+                           name = "password"
+                           placeholder="Your Backand password"
+                           ng-model = "password"
+                           ng-model-options="{debounce: 200}"
+                           required>
+                </div>
+                <div class="form-group">
+                    <input type="text"
+                           class="form-control"
+                           name = "appName"
+                           placeholder="Your Backand app name"
+                           ng-model = "appName"
+                           ng-model-options="{debounce: 200}"
+                           required>
+                </div>
+                <div class="form-group">
+                    <button type="submit"
+                            class="btn btn-primary pull-right">
+                        Log in
+                    </button>
+                </div>
+            </fieldset>
+        </form>
+    <div ng-show="error" class="alert alert-danger">{{error}}</div>
+    <div class="divider"></div>
+        <section class="additional-info">
+            <p class="text-center">
+                <span>Don't have an app? </span>
+                <strong><a href="https://www.backand.com/apps/#/sign_up">Sign up</a></strong>
+            </p>
+        </section>
     </div>
-</div>
-<div class="modal-footer">
-    <button class="btn btn-primary" ng-click="signIn()">Log in</button>
-    <button class="btn btn-default" ng-click="cancel()">Cancel</button>
 </div>
