--- a/app/views/login/login.html
+++ b/app/views/login/login.html
@@ -4,14 +4,14 @@
     <h4>Use your Backand username and password to login</h4>
 </div>
 <div class="body">
-        <form class="form" name="form" ng-submit="signIn()" >
+        <form class="form" name="form" ng-submit="vm.signIn()" >
             <fieldset>
                 <div class="form-group">
                     <input type="email"
                            class="form-control"
                            name = "username"
                            placeholder="Your Backand username"
-                           ng-model = "username"
+                           ng-model = "vm.username"
                            ng-model-options="{debounce: 200}"
                            required>
                     <div class="text-danger" ng-show="form.username.$error.email">This is not a valid email.</div>
@@ -21,7 +21,7 @@
                            class="form-control"
                            name = "password"
                            placeholder="Your Backand password"
-                           ng-model = "password"
+                           ng-model = "vm.password"
                            ng-model-options="{debounce: 200}"
                            required>
                 </div>
@@ -30,7 +30,7 @@
                            class="form-control"
                            name = "appName"
                            placeholder="Your Backand app name"
-                           ng-model = "appName"
+                           ng-model = "vm.appName"
                            ng-model-options="{debounce: 200}"
                            required>
                 </div>
@@ -42,7 +42,7 @@
                 </div>
             </fieldset>
         </form>
-    <div ng-show="error" class="alert alert-danger">{{error}}</div>
+    <div ng-show="error" class="alert alert-danger">{{vm.error}}</div>
     <div class="divider"></div>
         <section class="additional-info">
             <p class="text-center">
