fix syntax and Id

--- a/app/views/main/main.html
+++ b/app/views/main/main.html
@@ -18,7 +18,7 @@
     <!-- Todos list -->
     <div>
         <p  class="input-group"
-            ng-repeat="todo in vm.todos | orderBy:'-id'"
+            ng-repeat="todo in vm.todos | orderBy:'-Id'"
             style="padding:5px 10px; cursor: move;"
             ng-class="{'todo-completed': todo.completed}">
             <span class="input-group-btn">
