--- a/app/views/main/main.html
+++ b/app/views/main/main.html
@@ -43,4 +43,7 @@
             </span>
         </p>
     </div>
+    <div ng-show="vm.error" class="has-error">
+        <label class="form-control">{{vm.error}}</label>
+    </div>
 </div>
