connect with google

--- a/app/views/login/login.html
+++ b/app/views/login/login.html
@@ -39,6 +39,7 @@
                             class="btn btn-primary pull-right">
                         Log in
                     </button>
+                    <a href="" ng-click="vm.google()">google</a>
                 </div>
             </fieldset>
         </form>
