--- a/app/views/auth/reset-password.html
+++ b/app/views/auth/reset-password.html
@@ -3,15 +3,15 @@
     <h2>Reset Password</h2>
 </div>
 <div class="body">
-    <form class="form" name="myForm" ng-submit="vm.reset()" novalidate>
+    <form class="form" name="myForm" ng-submit="resetPassword.reset()" novalidate>
         <fieldset>
             <div class="form-group">
                 <input type="email"
                        class="form-control"
                        placeholder="Your Backand username"
-                       ng-model = "vm.username"
+                       ng-model = "resetPassword.username"
                        ng-model-options="{debounce: 200}"
-                       ng-show="vm.sendEmail"
+                       ng-show="resetPassword.sendEmail"
                        required>
                 <div class="text-danger" ng-show="myForm.username.$error.email">This is not a valid email.</div>
             </div>
@@ -21,31 +21,29 @@
                        class="form-control"
                        name="password"
                        placeholder="New Password"
-                       ng-model="vm.newPassword"
+                       ng-model="resetPassword.newPassword"
                        ng-model-options="{debounce: 200}"
-                       ng-show="!vm.sendEmail"
+                       ng-show="!resetPassword.sendEmail"
                        ng-minlength="6"
-                       ng-maxlength="20"
-                       >
+                       ng-maxlength="20">
             </div>
             <div class="form-group">
                 <input type="password"
                        class="form-control"
                        placeholder="Confirm Password"
                        name="confirm_password"
-                       ng-model="vm.confirmPassword"
+                       ng-model="resetPassword.confirmPassword"
                        ng-model-options="{debounce: 200}"
-                       ng-show="!vm.sendEmail"
-                       >
+                       ng-show="!resetPassword.sendEmail">
             </div>
             <div class="form-group">
                 <button type="submit"
-                        class="btn btn-primary pull-right">{{vm.success}}
-                    {{vm.sendEmail?'Reset':'Update'}}
+                        class="btn btn-primary pull-right">
+                    {{ resetPassword.sendEmail ? 'Reset' : 'Update' }}
                 </button>
             </div>
         </fieldset>
     </form>
-    <div ng-show="vm.error" class="alert alert-danger">{{vm.error}}</div>
-    <div ng-show="vm.success" class="alert alert-success"></div>
+    <div ng-show="resetPassword.error" class="alert alert-danger">{{resetPassword.error}}</div>
+    <div ng-show="resetPassword.success" class="alert alert-success">{{resetPassword.success}}</div>
 </div>
