--- a/app/views/auth/change-password.html
+++ b/app/views/auth/change-password.html
@@ -1,39 +1,36 @@
 <!-- Backand Login model -->
 <div class="header">
     <h2>Reset Password</h2>
-    <h4>User: {{vm.currentUserInfo}}</h4>
+    <h4>User: {{changePassword.currentUserInfo}}</h4>
 </div>
 <div class="body">
-    <form class="form" name="myForm" ng-submit="vm.update()" novalidate>
+    <form class="form" name="myForm" ng-submit="changePassword.update()" novalidate>
         <fieldset>
             <div class="form-group">
                 <input type="password"
                        class="form-control"
                        name="old-password"
                        placeholder="Old Password"
-                       ng-model="vm.oldPassword"
-                       ng-model-options="{debounce: 200}"
-                        >
+                       ng-model="changePassword.oldPassword"
+                       ng-model-options="{debounce: 200}">
             </div>
             <div class="form-group">
                 <input type="password"
                        class="form-control"
                        name="newPassword"
                        placeholder="New Password"
-                       ng-model="vm.newPassword"
+                       ng-model="changePassword.newPassword"
                        ng-model-options="{debounce: 200}"
                        ng-minlength="6"
-                       ng-maxlength="20"
-                        >
+                       ng-maxlength="20">
             </div>
             <div class="form-group">
                 <input type="password"
                        class="form-control"
                        placeholder="Confirm Password"
                        name="confirm_password"
-                       ng-model="vm.confirmPassword"
-                       ng-model-options="{debounce: 200}"
-                        >
+                       ng-model="changePassword.confirmPassword"
+                       ng-model-options="{debounce: 200}">
             </div>
             <div class="form-group">
                 <button type="submit"
@@ -43,6 +40,6 @@
             </div>
         </fieldset>
     </form>
-    <div ng-show="vm.error" class="alert alert-danger">{{vm.error}}</div>
-    <div ng-show="vm.success" class="alert alert-success">{{vm.success}}</div>
+    <div ng-show="changePassword.error" class="alert alert-danger">{{changePassword.error}}</div>
+    <div ng-show="changePassword.success" class="alert alert-success">{{changePassword.success}}</div>
 </div>
