added social authentication. authentication process moved to sdk

--- a/app/views/main/header.html
+++ b/app/views/main/header.html
@@ -1,11 +1,11 @@
 <div class="row">
     <div class="col-sm-4">
-        <a href="" ng-click="header.logout()">{{header.currentUser ? 'Sign Out' : 'Sign In'}}</a>
+        <a href="" ng-click="header.logout()">{{header.currentUser.name ? 'Sign Out' : 'Sign In'}}</a>
     </div>
     <div class="col-sm-4 pull-left">
-        <span>{{header.currentUser || 'Guest'}}</span>
+        <span>{{header.currentUser.name || 'Guest'}}</span>
     </div>
-    <div class="col-sm-4 pull-right" ng-show="header.currentUser">
+    <div class="col-sm-4 pull-right" ng-show="header.currentUser.name">
         <a href="" ui-sref="changePassword">Change Password</a>
     </div>
 </div>
