--- a/app/views/auth/login.html
+++ b/app/views/auth/login.html
@@ -26,7 +26,8 @@
                        ng-model-options="{debounce: 200}"
                        required>
             </div>
-            <div class="form-group">
+
+            <div class="form-group" ng-hide="login.appNameExists">
                 <input type="text"
                        class="form-control"
                        name = "appName"
@@ -35,6 +36,7 @@
                        ng-model-options="{debounce: 200}"
                        required>
             </div>
+
             <div class="form-group">
                 <div class="checkbox">
                     <label for="newUser">
@@ -87,3 +89,10 @@
     <div ng-show="login.error" class="alert alert-danger">{{login.error}}</div>
     <div ng-show="login.success" class="alert alert-success">{{login.success}}</div>
 </div>
+<button ng-click="login.socialSignIn('facebook')">Sign in with Facebook</button>
+<button ng-click="login.socialSignIn('google')">Sign in with Google</button>
+<button ng-click="login.socialSignIn('github')">Sign in with GitHub</button>
+<br/>
+<button ng-click="login.socialSignUp('facebook')">Sign up with Facebook</button>
+<button ng-click="login.socialSignUp('google')">Sign up with Google</button>
+<button ng-click="login.socialSignUp('github')">Sign up with GitHub</button>
