added reset password, social sign in buttons

--- a/app/assets/styles/main.css
+++ b/app/assets/styles/main.css
@@ -81,3 +81,7 @@ body {
 .todo-completed, .todo-completed input {
   text-decoration: line-through;
 }
+
+.social-signin-block {
+  width: 160px;
+}
