--- a/app/views/auth/change-password.html
+++ b/app/views/auth/change-password.html
@@ -4,33 +4,33 @@
     <h4>User: {{changePassword.currentUserInfo}}</h4>
 </div>
 <div class="body">
-    <form class="form" name="myForm" ng-submit="changePassword.update()" novalidate>
+    <form class="form" name="myForm" ng-submit="changePassword.update()" novalidate ng-model-options="{debounce: 200}">
         <fieldset>
-            <div class="form-group">
+            <div ng-hide="changePassword.token" class="form-group">
+                <label for="old-password">Old Password</label>
                 <input type="password"
                        class="form-control"
-                       name="old-password"
-                       placeholder="Old Password"
-                       ng-model="changePassword.oldPassword"
-                       ng-model-options="{debounce: 200}">
+                       name="oldPassword"
+                       id="old-password"
+                       ng-model="changePassword.oldPassword">
             </div>
             <div class="form-group">
+                <label for="new-password">New Password</label>
                 <input type="password"
                        class="form-control"
                        name="newPassword"
-                       placeholder="New Password"
+                       id="new-password"
                        ng-model="changePassword.newPassword"
-                       ng-model-options="{debounce: 200}"
                        ng-minlength="6"
                        ng-maxlength="20">
             </div>
             <div class="form-group">
+                <label for="confirm-password">Confirm Password</label>
                 <input type="password"
                        class="form-control"
-                       placeholder="Confirm Password"
-                       name="confirm_password"
-                       ng-model="changePassword.confirmPassword"
-                       ng-model-options="{debounce: 200}">
+                       name="confirmPassword"
+                       id="confirm-password"
+                       ng-model="changePassword.confirmPassword">
             </div>
             <div class="form-group">
                 <button type="submit"
