--- a/app/views/auth/login.html
+++ b/app/views/auth/login.html
@@ -5,7 +5,11 @@
     <a ui-sref="todos">view the todo list as a guest (read only)</a></h4>
 </div>
 <div class="body">
-    <form class="form" name="form" ng-submit="login.authenticate()" novalidate >
+    <form class="form"
+          name="form"
+          ng-submit="login.authenticate()"
+          novalidate
+          ng-model-options="{updateOn: 'default blur', debounce: {'default': 200, 'blur': 0}}">
         <fieldset>
 
             <div class="form-group">
@@ -15,8 +19,7 @@
                                name="newUser"
                                id="newUser"
                                placeholder="New User"
-                               ng-model="login.newUser"
-                               ng-model-options="{debounce: 200}">
+                               ng-model="login.newUser">
                         New User
                     </label>
                 </div>
@@ -25,30 +28,27 @@
             <div class="form-group">
                 <input type="email"
                        class="form-control"
-                       name = "username"
+                       name="username"
                        placeholder="Your Backand username"
-                       ng-model = "login.username"
-                       ng-model-options="{debounce: 200}"
+                       ng-model="login.username"
                        required>
                 <div class="text-danger" ng-show="form.username.$error.email">This is not a valid email.</div>
             </div>
             <div class="form-group">
                 <input type="password"
                        class="form-control"
-                       name = "password"
+                       name="password"
                        placeholder="Your Backand password"
-                       ng-model = "login.password"
-                       ng-model-options="{debounce: 200}"
+                       ng-model="login.password"
                        required>
             </div>
 
             <div class="form-group" ng-hide="login.appNameExists">
                 <input type="text"
                        class="form-control"
-                       name = "appName"
+                       name="appName"
                        placeholder="Your Backand app name"
-                       ng-model = "login.appName"
-                       ng-model-options="{debounce: 200}"
+                       ng-model="login.appName"
                        required>
             </div>
 
@@ -58,7 +58,6 @@
                        name="name"
                        placeholder="Your first name"
                        ng-model="login.firstName"
-                       ng-model-options="{debounce: 200}"
                        ng-show="login.newUser">
             </div>
             <div class="form-group">
@@ -67,7 +66,6 @@
                        name="name"
                        placeholder="Your last name"
                        ng-model="login.lastName"
-                       ng-model-options="{debounce: 200}"
                        ng-show="login.newUser">
             </div>
             <div ng-hide="login.newUser" class="form-group">
